--- a/index.html
+++ b/index.html
@@ -3,63 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fruit Blast: 999 Level Quest</title>
+    <title>🌸 Fruit Blast: Coquette Edition 🌸</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <audio id="bg-music" loop>
-        <source src="bg-music.mp3.mp3.mp3" type="audio/mpeg">
-    </audio>
-    <audio id="click-sound" preload="auto">
-        <source src="click.mp3.mp3" type="audio/mpeg">
-    </audio>
-    <audio id="gameover-sound" preload="auto">
-        <source src="gameover.mp3.mp3" type="audio/mpeg">
-    </audio>
-    <audio id="victory-sound" preload="auto">
-        <source src="victory.mp3.mp3.mp3" type="audio/mpeg">
-    </audio>
-
-    <div id="pause-screen" class="overlay" style="display:none;">
-        <h1>Game Paused</h1>
-        <div class="menu-buttons">
-            <button onclick="togglePause()" style="background: #4ecdc4;">Resume</button>
-            <button onclick="confirmRestart()" style="background: #ff9f1c;">Restart Level</button>
-            <button onclick="showLevelMenu()" style="background: #FFB6C1;">Level Select</button>
-        </div>
-    </div>
-
-    <div id="level-menu" class="overlay">
-        <h1>Fruit Blast</h1>
-        <p>Select an Unlocked Level</p>
-        <div id="level-list" class="level-grid"></div>
-        <button class="quit-btn" onclick="resetProgress()" style="margin-top:20px;">Reset All Progress</button>
-    </div>
-
-    <div id="game-over-screen" class="overlay" style="display:none;">
-        <h1 id="fail-title">Game Over</h1>
-        <p id="fail-reason"></p>
-        <div class="menu-buttons">
-            <button onclick="initLevel()" style="background: #4ecdc4;">Retry Level</button>
-            <button onclick="showLevelMenu()" style="background: #FFB6C1;">Level Select</button>
-        </div>
-    </div>
+    <audio id="bg-music" loop><source src="bg-music.mp3" type="audio/mpeg"></audio>
+    <audio id="click-sound" preload="auto"><source src="click.mp3" type="audio/mpeg"></audio>
+    <audio id="gameover-sound" preload="auto"><source src="gameover.mp3" type="audio/mpeg"></audio>
+    <audio id="victory-sound" preload="auto"><source src="victory.mp3" type="audio/mpeg"></audio>
 
     <div class="stats-container">
-        <div class="stat">Level: <span id="current-level">1</span></div>
-        <div class="stat">Streak: <span id="streak-count">0</span> 🔥</div>
-        <div class="stat">Moves: <span id="moves">0</span> / <span id="max-moves">--</span></div>
-        <div class="stat">Time: <span id="timer">--</span></div>
-        <div class="menu-buttons-mini">
-            <button id="mute-btn" onclick="toggleMute()">🔊 Sound</button>
-            <button id="pause-btn" onclick="togglePause()">Pause</button>
-            <button onclick="confirmRestart()" style="background: #ff9f1c; color: white;" title="Restart Level">↺</button>
-            <button class="quit-btn" onclick="showLevelMenu()">Menu</button>
+        <div class="stat-group">
+            <div class="stat">Lv <span id="current-level">1</span></div>
+            <div class="stat">⏱ <span id="timer">00:00</span></div>
+            <div class="stat">Moves: <span id="moves">0</span>/<span id="move-limit">0</span></div>
+            <div class="stat" id="streak-container" style="display:none">🔥 <span id="streak-count">0</span></div>
+        </div>
+        <div class="nav-controls">
+            <button onclick="togglePause()" class="nav-btn" id="pause-btn">⏸</button>
+            <button onclick="initLevel()" class="nav-btn">↺</button>
+            <button onclick="showLevelMenu()" class="nav-btn">Menu</button>
+            <button id="mute-btn" onclick="toggleMute()" class="nav-btn">🔊</button>
         </div>
     </div>
 
     <section class="memory-game" id="game-board"></section>
+
+    <div id="pause-overlay" class="overlay" style="display:none;">
+        <div class="victory-card">
+            <h1 class="victory-text">🌸 Paused 🌸</h1>
+            <div style="display: flex; flex-direction: column; gap: 12px; align-items: center;">
+                <button onclick="togglePause()" class="pink-btn">Resume Game</button>
+                <button onclick="showLevelMenu()" class="pink-btn sky-btn">Level Menu</button>
+                <button onclick="initLevel()" class="pink-btn sky-btn">Restart Level</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="level-menu" class="overlay" style="display:none;">
+        <div class="victory-card">
+            <h1 class="victory-text">🌸 Select Level 🌸</h1>
+            <div id="level-list" class="level-grid"></div>
+            <button onclick="closeMenu()" class="pink-btn" style="margin-top: 20px;">Back</button>
+        </div>
+    </div>
+
+    <div id="victory-overlay" class="overlay" style="display:none;">
+        <div class="victory-card">
+            <h1 class="victory-text">✨ Level Complete! ✨</h1>
+            <p>You're doing amazing, gorgeous! 💖</p>
+        </div>
+    </div>
+
+    <div id="game-over-screen" class="overlay" style="display:none;">
+        <div class="victory-card">
+            <h1 id="game-over-text" class="victory-text">🎀 Game Over 🎀</h1>
+            <button onclick="initLevel()" class="pink-btn">Try Again</button>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
